--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-h1 {
-    font-size: 26px;
-    color: navy;
+.goog-image {
+    position: relative;
+    padding-top: 109px;
+    display: block;
 }
+
+.left-b {
+    color: red;
+}
+
+.right-b {
+    color: green;
+}
+
