--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.goog-image {
+#center {
+
+}
+
+#center .goog-image {
     display: block;
     padding-top: 109px;
     margin: auto;
@@ -12,14 +16,20 @@
 }
 
 .left-b {
-    color: red;
-    display: inline-block;
+    padding: 10.5px 21px;
+    text-align: center;
+    width: 7%;
     margin: auto;
+    color: red;
+    border: 1px solid red;
 }
 
 .right-b {
-    color: green;
-    display: inline-block;
+    padding: 10.5px 21px;
+    text-align: center;
+    width: 7%;
     margin: auto;
+    color: green;
+    border: 1px solid green;
 }
 
